# bukzor.langlang

./: CLAUDE.md  Cargo.toml  README.md  justfile  meta-config-architecture.md  migration-strategy.md  mvp-unified-config.ts
crates/common/: Cargo.toml  build.rs
crates/common/src/: lib.rs
docs/: capnp-pipeline-architecture.md  commonalities-analysis.md  dhall2-design.md  free-monads-and-effect-algebras.md  lisp-as-universal-ir.md  python-as-monadic-code.md  python-fomega-encoding.md  theoretical-foundations.md
docs/for-claude/: implementation-approaches.md
schema/: ast.capnp  fomega.capnp  types.capnp
